attempt to fix white space issue, .contact not used now, TEST BY CANCELLING OUT OVERFLOW HIDDEN

--- a/css/style.css
+++ b/css/style.css
@@ -119,8 +119,7 @@ bottom: 0;
 right:0;
 margin: 0;
 border: 1px solid transparent;
-overflow: hidden;
-overflow-x: hidden; 
+/*overflow: hidden;*/
 }
 
 .section.contact p {
